--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "node --inspect app/app.js",
     "start": "node app/app.js",
-    "sync": "yuque-sync -n 221784 -d ./docs && cp ./docs/sidebar.json ./static/"
+    "sync": "yuque-sync -n 221784 -d ./docs -b ud8q1m,ikpq0g,mgdczx,vgedv5,grnfzw,vy3fxr,gv7x9x,fd13bt,rgw5r0 && cp ./docs/sidebar.json ./static/"
   },
   "repository": {
     "type": "git",
@@ -32,7 +32,7 @@
   "homepage": "https://github.com/iuap-design/ucf.tinper.org#readme",
   "devDependencies": {},
   "dependencies": {
-    "@yonyou/yuque-sync": "^0.1.3",
+    "@yonyou/yuque-sync": "^0.2.1",
     "fs-extra": "^7.0.1",
     "koa": "^2.6.2",
     "koa-bodyparser": "^4.2.1",
@@ -45,6 +45,7 @@
     "log4js": "^3.0.6",
     "marked": "^0.7.0",
     "moment": "^2.24.0",
-    "nunjucks": "^3.1.6"
+    "nunjucks": "^3.1.6",
+    "yuque-sync": "^0.2.2"
   }
 }
