--- a/package.json
+++ b/package.json
@@ -33,8 +33,9 @@
   "devDependencies": {},
   "dependencies": {
     "@yonyou/yuque-sync": "^0.2.1",
+    "all": "0.0.0",
     "fs-extra": "^7.0.1",
-    "koa": "^2.6.2",
+    "koa": "^2.11.0",
     "koa-bodyparser": "^4.2.1",
     "koa-cors": "0.0.16",
     "koa-ejs": "^4.2.0",
@@ -45,7 +46,8 @@
     "log4js": "^3.0.6",
     "marked": "^0.7.0",
     "moment": "^2.24.0",
-    "nunjucks": "^3.1.6",
+    "node-localstorage": "^1.3.1",
+    "nunjucks": "^3.2.0",
     "yuque-sync": "^0.2.2"
   }
 }
