--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "node --inspect app/app.js",
     "start": "node app/app.js",
+    "book":"yuque2book -t xxx -l https://www.yuque.com/tinper/gbimbg",
     "sync": "yuque-sync -n 1090339 -d ./docs -b ud8q1m,ikpq0g,mgdczx,vgedv5,grnfzw,vy3fxr,gv7x9x,fd13bt,rgw5r0,hpyvca && cp ./docs/sidebar.json ./static/"
   },
   "repository": {
@@ -48,6 +49,6 @@
     "moment": "^2.24.0",
     "node-localstorage": "^1.3.1",
     "nunjucks": "^3.2.0",
-    "yuque-sync": "^0.2.2"
+    "yuque2book": "^0.1.4"
   }
 }
